--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
       <div id="mpl"></div>
       <py-script output="mpl">
+print("Test of pyscript github pages")        
 import matplotlib.pyplot as plt
 import matplotlib.tri as tri
 import numpy as np
