--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ fig1.colorbar(tpc)
 ax1.set_title('tripcolor of Delaunay triangulation, flat shading')
 
 fig1
-plot("Test of pyscript github pages")                               
+print("Test of pyscript github pages")                               
       </py-script>
     </body>
 </html>
